refactor: update URL creation to use URI for better handling in WebpayApiResource